# 21-

./: CMakeLists.txt  README.md
cross_lib/json/lib/: libjsoncpp.so.1.9.7  libjsoncpp.so.27
cross_lib/json/lib/cmake/jsoncpp/: jsoncpp-targets-release.cmake  jsoncpp-targets.cmake  jsoncppConfigVersion.cmake
cross_lib/json/lib/pkgconfig/: jsoncpp.pc
cross_lib/ncnn/include/ncnn/: platform.h
cross_lib/ncnn/lib/cmake/ncnn/: ncnn.cmake  ncnnConfig.cmake  ncnnConfigVersion.cmake
cross_lib/ncnn/lib/pkgconfig/: ncnn.pc
cross_lib/opencv/include/opencv4/opencv2/: cvconfig.h
cross_lib/opencv/lib/: libopencv_calib3d.so.4.10.0  libopencv_core.so.4.10.0  libopencv_features2d.so.4.10.0  libopencv_flann.so.4.10.0  libopencv_highgui.so.4.10.0  libopencv_imgcodecs.so.4.10.0  libopencv_ml.so.4.10.0  libopencv_objdetect.so.4.10.0  libopencv_photo.so.4.10.0  libopencv_stitching.so.4.10.0  libopencv_video.so.4.10.0
cross_lib/opencv/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake
smartCar/: cls.param  cls_fps.cc  crop.cc  detect.cc  main.cc  model.ncnn.param  testtest.cc
smartCar/code/: Img_process.cc  Img_process.h  PID.cc  PID.h  circle.cc  circle.h  cross.cc  encoder.cc  encoder.h  garage.cc  garage.h  motor.cc  motor.h  music.cc  music.h  parameter.cc  parameter.h  rot.cc  rot.h  turn.cc  turn.h  本文件夹说明.txt
smartCar/include/: font.h  headfile.h  ww_brushless.h  ww_buzzer.h  ww_camera_server.h  ww_icm42688.h  ww_ioctl.h  ww_key.h  ww_lcd.h  ww_motor.h  ww_tcp_client.h  ww_timerThread.h  ww_vl53l0x.h
smartCar/wuwu_library/: font.cc  ww_brushless.cc  ww_buzzer.cc  ww_camera_server.cc  ww_icm42688.cc  ww_key.cc  ww_lcd.cc  ww_motor.cc  ww_tcp_client.cc  ww_timerThread.cc  ww_vl53l0x.cc
